DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2004-10-11 patrickh Refactored vpr::LibraryLoader into a simple collection of
                    helper functions.
                    NEW VERSION: 0.40.0
2004-09-26 patrickh Removed the NSPR dependency on Mac OS X.
                    NEW VERSION: 0.39.1
2004-09-24 patrickh Removed the flags parameter from the methods recvfrom() and
                    sendto() in vpr::SocketDatagram.
                    NEW VERSION: 0.39.0
2004-09-08 dshipton Interface changes to vpr::ProfileManager.
                    NEW VERSION: 0.38.0
2004-08-22 allenb   Added new feature the TSObjectProxy to allow direct request
                    of object for a specific thread.
                    NEW VERSION: 0.37.1
2004-08-02 allenb   Refactored ProfileManager code and rewrote ProfileIterator
                    to behave like an iterator.
                    NEW VERSION: 0.37.0
2004-07-13 patrickh Fixed obscure RTTI problems relating to vpr::TSObject.
                    NEW VERSION: 0.36.3
2004-05-20 browner  vpr::Debug can now be told to output to a file instead of
                    just std::cout
2004-05-17 patrickh Use UuidCreate() on Windows to generate GUIDs.
                    NEW VERSION: 0.36.1
2004-05-08 patrickh Changed vpr::InetAddr::getHostname() to return something
                    meaningful if the hostname lookup fails.
                    NEW VERSION: 0.36.0
2004-04-21 patrickh With SPROC threads, thread-specific data is now stored in
           aronb    PRDA->usr2_data to avoid conflicts with OpenSG and
                    OpenThreads.
                    NEW VERSION: 0.35.3
2004-02-02 allenb   Added test() method to condition variables.
                    NEW VERSION: 0.34.1
2004-01-28 patrickh Updated to require an installed build of CppDOM.  This
                    library is no longer compiled into VPR.
                    NEW VERSION: 0.34.0