@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-10-14 patrickh Added support for named semaphores in vpr::SemaphorePosix
+                    for use on Darwin 7.5 and earlier.
+                    NEW VERSION: 0.40.1
 2004-10-11 patrickh Refactored vpr::LibraryLoader into a simple collection of
                     helper functions.
                     NEW VERSION: 0.40.0
